--- a/www/templates/assets/css/main.css
+++ b/www/templates/assets/css/main.css
@@ -441,6 +441,7 @@ a.badge:active {
   margin-top: 0;
 }
 .card__img {
+  border-radius: 10px;
   width: 100%;
   margin-bottom: 15px;
   overflow: hidden;
@@ -453,6 +454,7 @@ a.badge:active {
 .card--post {
   width: 100%;
   height: 308px;
+  margin-bottom: 30px;
 }
 .card--portfolio {
   padding: 0;
@@ -1240,6 +1242,8 @@ fieldset {
   margin-bottom: 2rem;
 }
 .post-img img {
+
+  margin: auto;
   max-width: 100%;
 }
 .post-text {
