--- a/www/templates/assets/css/main.css
+++ b/www/templates/assets/css/main.css
@@ -208,8 +208,11 @@ body {
   max-width: 100%;
 }
 .avatar--small {
-  width: 50px;
-  height: 50px;
+  width: 48px;
+  height: 48px;
+  background: url(../img/avatars/noavatar.png) center no-repeat;
+  -webkit-background-size: cover;
+  background-size: cover;
 }
 .badge,
 a.badge {
