Главная + недоделанные работы

--- a/www/templates/assets/css/main.css
+++ b/www/templates/assets/css/main.css
@@ -43,6 +43,26 @@ img {
 a {
   color: #037EC6;
 }
+
+
+a.title-1:hover, 
+a.title-2:hover, 
+a.title-3:hover, 
+a.title-4:hover, 
+a.title-5:hover, 
+a.title-6:hover, 
+a.title:hover, 
+.title-1 a:hover, 
+.title-2 a:hover, 
+.title-3 a:hover, 
+.title-4 a:hover, 
+.title-5 a:hover, 
+.title-6 a:hover, 
+.title a:hover {
+  color: #037EC6;
+}
+
+
 code,
 pre {
   background-color: #f5f5f5;
@@ -449,6 +469,10 @@ a.badge:active {
   width: 100%;
   margin-bottom: 15px;
   overflow: hidden;
+}
+
+.card__img img {
+  text-align: center !important;
 }
 .card__title {
   font-size: 22px;
